--- a/rangel-videos-back/package.json
+++ b/rangel-videos-back/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "um site de upload de vídeos básico para o aprendizado. Feito por mim",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node ./src/routes.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,13 @@
   },
   "homepage": "https://github.com/GabrielDaloco/rangel-videos#readme",
   "dependencies": {
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "mysql2": "^3.9.2"
+  },
+  "keywords": [],
+  "devDependencies": {
+    "@types/node": "^20.11.25",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
   }
 }
