--- a/rangel-videos-back/package.json
+++ b/rangel-videos-back/package.json
@@ -19,7 +19,13 @@
   },
   "homepage": "https://github.com/GabrielDaloco/rangel-videos#readme",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffprobe-installer/ffprobe": "^2.1.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.2"
   },
   "keywords": [],
